# stacktower

./: .air.toml  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REFACTORING_PLAN.md  SECURITY.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  main.go  package.json  pyproject.toml  tktm.json  tktmback.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  commitlint.yml  pages.yml  release.yml
api/: openapi.yaml
blogpost/: index.html  script.js  styles.css
cmd/api/: main.go
cmd/server/: infra.go  main.go  modes.go
cmd/stacktower/: main.go  main_test.go
cmd/stacktowerd/: infra.go  main.go  modes.go  standalone.go
docs/adr/: 001-infrastructure-packages.md
examples/manifest/: Cargo.toml  Gemfile  composer.json  example-app.gemspec  go.mod  package.json  pom.xml  pyproject.toml  requirements.txt
examples/real/: cobra.json  com.google.guava:guava.json  com.google.guava_guava.json  console.json  flask.json  htmd.json  openai.json  rspec.json  serde.json  yargs.json
examples/test/: microservices.json
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
internal/api/: deps.go  errors.go  github.go  handlers_artifacts.go  handlers_auth.go  handlers_common.go  handlers_explore.go  handlers_graph.go  handlers_health.go  handlers_history.go  handlers_integrations.go  handlers_job.go  handlers_jobs.go  handlers_layout.go  handlers_library.go  handlers_parse.go  handlers_render.go  handlers_repo.go  handlers_repos.go  handlers_stats.go  handlers_suggestions.go  handlers_visualize.go  helpers.go  jobs.go  middleware.go  pipeline.go  render.go  response.go  root.go  server.go  session.go  types.go  worker.go
internal/cli/: artifacts.go  auth.go  cache.go  cache_test.go  cli.go  cli_test.go  cmd_cache.go  cmd_github.go  cmd_layout.go  cmd_parse.go  cmd_parse_github.go  cmd_pqtree.go  cmd_render.go  cmd_visualize.go  commands.go  completion.go  github.go  info.go  layout.go  list.go  log.go  log_test.go  logger.go  opts.go  orderer.go  ordering.go  parse.go  parse_github.go  parse_github_test.go  parse_test.go  paths.go  paths_test.go  pipeline.go  pqtree.go  pqtree_test.go  render.go  render_test.go  resolve.go  root.go  root_test.go  (+7 more)
internal/jobs/: doc.go  export.go  layout.go  parse.go  render.go
internal/worker/: handlers.go  worker.go
pkg/: doc.go
pkg/artifact/: artifact.go  artifact_test.go  backend.go  local_backend.go  prod_backend.go
pkg/buildinfo/: version.go
pkg/cache/: cache.go  cache_test.go  combined.go  errors.go  file.go  hash.go  instrumented.go  memory.go  null.go  scoped.go
pkg/config/: config.go  ttl.go
pkg/dag/: crossings.go  dag.go  dag_test.go  doc.go  example_test.go
pkg/dto/: doc.go  example_test.go  graph.go  graph_test.go  layout.go  types.go
pkg/errors/: errors.go  errors_test.go  validation.go  validation_test.go
pkg/fonts/: LICENSE  fonts.go
pkg/graph/: doc.go  example_test.go  graph.go  graph_test.go  layout.go  types.go
pkg/hash/: hash.go
pkg/httputil/: cache.go  cache_test.go  doc.go  example_test.go  retry.go  retry_test.go
pkg/infra/: README.md  common.go  config.go  doc.go  mongo.go  redis.go
pkg/integrations/: circuitbreaker.go  circuitbreaker_test.go  client.go  client_test.go  common.go  doc.go  example_test.go  ratelimit.go  semver.go  semver_test.go
pkg/io/: doc.go  example_test.go  export.go  export_test.go  import.go  import_test.go
pkg/jobs/: doc.go
pkg/kv/: cache.go  doc.go  filesystem.go  memory.go  redis.go  retry.go  store.go
scripts/: test_api_e2e.sh  test_cli_e2e.sh  test_e2e.sh
(+392 files in other folders)
