[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "corentin jacquet", email = "corentin@comesales.eu" },
  { name = "erik herpin", email = "erik@comesales.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "apscheduler>=3.11.0",
  "inboard[fastapi]==0.78.0",
  "ua-parser[regex]>=1.0.1",
  "asgi-logger>=0.1.0",
  "python-multipart>=0.0.5",
  "email-validator>=1.3.0",
  "requests>=2.28.1",
  "passlib[bcrypt]>=1.7.4",
  "cryptography>=45.0.5",
  "tenacity>=8.1.0",
  "emails>=0.6.0",
  "sentry-sdk[fastapi]>=2.42.1",
  "jinja2>=3.1.2",
  "pyjwt>=2.10.1",
  "python-calamine>=0.3.2",
  "pydantic>=2.0,<2.10.6",
  "pydantic-ai-slim[openai,mistral,bedrock]>=1.20",
  "pydantic-settings>=2.0.3",
  "pydantic-extra-types>=2.9.0",
  "httpx>=0.23.2",
  "setuptools>=65.6.3",
  "motor>=3.3.1",
  "pytest==8.3.5",
  "pytest-cov==4.1.0",
  "pytest-asyncio>=0.26.0",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "odmantic>=1.0,<2.0",
  "phonenumbers>=8.13.45",
  "pypdf>=6.4.0",
  "minio>=7.2.19",
  "slowapi>=0.1.9",
  "pillow>=10.4.0",
  "pymongo-migrate>=1.0.0",
]

[project.optional-dependencies]
checks = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.11.2",
  "autoflake>=2.0.0",
  "flake8>=6.0.0",
]

[project.urls]
Documentation = "https://github.com/unknown/app#readme"
Issues = "https://github.com/unknown/app/issues"
Source = "https://github.com/unknown/app"

[tool.hatch.version]
path = "app/__version__.py"

[dirs.env]
virtual = "./.venv"

[tool.hatch.envs.default]
dev-mode = true
python="3.11"
dependencies = []

[tool.hatch.build.targets.sdist]
include = ["/app"]

[tool.hatch.envs.development]
features = []
path = ".venv"
[tool.hatch.envs.development.env-vars]
ENV = "development"


[tool.hatch.envs.production]
dev-mode = false
features = []
path = ".venv"
[tool.hatch.envs.production.env-vars]
ENV = "production"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "isort>=5.11.2",
  "python>=3.11",
]
[tool.hatch.envs.lint.scripts]
style = [
  "isort --check --diff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "isort {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
src_paths = ["app", "tests"]

[tool.mypy]
files = ["**/*.py"]
plugins = "pydantic.mypy"
show_error_codes = true
strict = true