[project]
name = "example-python-project"
version = "0.1.0"
description = "Example project for testing stacktower manifest parsing"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
]

[tool.poetry]
name = "example-python-project"
version = "0.1.0"
description = "Example project for testing stacktower manifest parsing"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
click = "^8.0.0"
pydantic = "^2.0.0"
httpx = "^0.24.0"
rich = "^13.0.0"

